feat: use virtual threads in DeviceScanner
- Replace fixed thread pool with virtual threads
- Remove pool-size configuration (no longer needed)